// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositTextField passes additional props to TextField 1`] = `
<View
  style={
    [
      {},
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#131416",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {},
      ]
    }
  >
    Test Label
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#b4b4b528",
        "borderColor": "#b4b4b566",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        maxLength={50}
        multiline={false}
        numberOfLines={1}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholder="Enter your text here"
        placeholderTextColor="#66676a"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "lineHeight": 0,
            "opacity": 1,
          }
        }
        testID="deposit-field-test-id"
      />
    </View>
  </View>
</View>
`;

exports[`DepositTextField should apply custom container style when provided 1`] = `
<View
  style={
    [
      {},
      {
        "marginTop": 20,
      },
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#131416",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {},
      ]
    }
  >
    Test Label
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#b4b4b528",
        "borderColor": "#b4b4b566",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        multiline={false}
        numberOfLines={1}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#66676a"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
          }
        }
        testID="deposit-field-test-id"
      />
    </View>
  </View>
</View>
`;

exports[`DepositTextField should render TextField component with correct props 1`] = `
<View
  style={
    [
      {},
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#131416",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {},
      ]
    }
  >
    Test Label
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#b4b4b528",
        "borderColor": "#b4b4b566",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        multiline={false}
        numberOfLines={1}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#66676a"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
          }
        }
        testID="deposit-field-test-id"
      />
    </View>
  </View>
</View>
`;

exports[`DepositTextField should render default settings correctly 1`] = `
<View
  style={
    [
      {},
      undefined,
    ]
  }
>
  <Text
    accessibilityRole="text"
    style={
      [
        {
          "color": "#131416",
          "fontFamily": "Geist-Regular",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
        },
        {},
      ]
    }
  >
    Test Label
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#b4b4b528",
        "borderColor": "#b4b4b566",
        "borderRadius": 12,
        "borderWidth": 1,
        "flexDirection": "row",
        "height": 48,
        "opacity": 1,
        "paddingHorizontal": 16,
      }
    }
    testID="textfield"
  >
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <TextInput
        autoFocus={false}
        editable={true}
        keyboardAppearance="light"
        multiline={false}
        numberOfLines={1}
        onBlur={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#66676a"
        style={
          {
            "backgroundColor": "inherit",
            "borderColor": "transparent",
            "borderWidth": 1,
            "color": "#131416",
            "fontFamily": "Geist-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "height": 46,
            "letterSpacing": 0,
            "opacity": 1,
          }
        }
        testID="deposit-field-test-id"
      />
    </View>
  </View>
</View>
`;
